fix clipping on form popup

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -19,6 +19,11 @@ h2 {
     font-weight: 600;
 }
 
+.content-container-overflow {
+    border-radius: 24px;
+    background-color: white;
+}
+
 .content-container {
     border-radius: 24px;
     background-color: white;
